Trying to fix bg fixed for coach div on mobile

--- a/css/coach.css
+++ b/css/coach.css
@@ -2,7 +2,7 @@
     color: #FFFFFF;
     font-size: 1.4em;
     margin:0;
-    background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(../img/pexels-photo-416754.jpeg) no-repeat center fixed; 
+    background: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(../img/pexels-photo-416754.jpeg) no-repeat center center fixed; 
     background-size:cover; 
     display: flex;
 }
